# web-tunnel

./: .gitignore  Cargo.toml  Dockerfile
src/: main.rs  server.rs  socketserver.rs
static/: index.html  index.js
static/svelte-frontend/svelte-app/: package-lock.json  package.json  tailwind.config.js
static/svelte-frontend/svelte-app/src/: App.svelte  Main.svelte  Receive.svelte  Send.svelte  Spinner.svelte  Tailwindcss.svelte
static/svelte-frontend/svelte-app/src/icons/: File.svelte  Image.svelte  Upload.svelte
