[package]
name = "web-tunnel"
version = "0.1.0"
authors = ["ali <anili@my.bcit.ca>"]
edition = "2018"

[dependencies]
actix = "0.9.0"
actix-codec = "0.3.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
futures = "0.3.1"
bytes = "0.5.5"
actix-http = "1.0.1"

